examples/test/testpolicy13500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13500
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key14: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value13
          key22: value39
      podSelector:
        matchLabels:
          key2: value20
          key3: value30
          key25: value19
